--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -39,10 +39,7 @@
                 <li class="nav-item  dropdown">
                     <a class="nav-link dropdown-toggle" href="pablo" id="navbarDropdownMenuLink" data-toggle="dropdown"
                         aria-haspopup="true" aria-expanded="false" (click)="sum()">
-                        <i class="fas fa-shopping-cart"></i>
-                        <span class="cart-badge">{{CartList.length}}</span>
-
-                        
+                        <mat-icon matBadge="{{CartList.length}}" matBadgeColor="primary">shopping_cart</mat-icon>
                         <p>
                             <span class="d-lg-none d-md-block">Some Actions</span>
                         </p>
