--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -38,7 +38,7 @@
                 </li>
                 <li class="nav-item  dropdown">
                     <a class="nav-link dropdown-toggle" href="pablo" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false" (click)="sum()">
+                        aria-haspopup="true" aria-expanded="false" (click)="sum()" *ngIf="role=='Customer'">
                         <mat-icon matBadge="{{CartList.length}}" matBadgeColor="primary">shopping_cart</mat-icon>
                         <p>
                             <span class="d-lg-none d-md-block">Some Actions</span>
