--- a/src/app/pages/forgot-pwd/forgot-pwd.component.html
+++ b/src/app/pages/forgot-pwd/forgot-pwd.component.html
@@ -86,7 +86,7 @@
                                 </button>
                                 <!-- <a class="btn btn-default btn-round">Cancel</a> -->
                                 &nbsp;
-                                <button type="submit" [disabled]="!forgotForm.form.valid || !selectedRole"
+                                <button type="submit" [disabled]="!forgotForm.form.valid"
                                     (click)="forgotPassword(forgotPwdModel)" class="btn btn-info btn-round">
                                     <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
                                 </button>
@@ -108,7 +108,7 @@
                                         value="" pattern="0-9" (focus)="focus = true" #email="ngModel" />
 
                                     <div class="input-group-append">
-                                        <span class="input-group-text" id="basic-addon1"><i class="fa fa-envelope"
+                                        <span class="input-group-text" id="basic-addon1"><i class="fa fa-key"
                                                 aria-hidden="true"></i></span>
                                     </div>
 
@@ -122,14 +122,21 @@
                                     </div>
                                 </div>
                             </div>
+                            <div class="link d-flex justify-content-center" style="padding-top:10px ;color:blue;" >
+                                <a >
+                                    <strong>Resend OTP in: </strong>{{timeLeft}}
+                                </a>
+                            </div>
                             <div class="card-footer text-center">
+                                <button class="btn btn-danger btn-block btn-round" id="registration-submit" *ngIf="timeLeft==0"
+                                (click)="resendOTP()" value="Sign in"><i class="fa fa-sign-in"></i> Resend OTP</button>
+                                <br>
                                 <button type="cancel" routerLink='/pages/login' class="btn btn-default btn-round">
                                     <i class="fa fa-times" aria-hidden="true"></i> Cancel
                                 </button>
                                 &nbsp;
                                 <button type="submit" (click)="saveOTP(forgotPwdModel)" [disabled]="!otpForm.form.valid"
-                                    class=" btn
-                  btn-info btn-round">
+                                    class=" btn btn-info btn-round">
                                     <i class="fa fa-paper-plane" aria-hidden="true"></i> Submit
                                 </button>
                             </div>
